completed nav bar and updated sign up page

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -7,10 +7,10 @@ $info: #7854e4;
 $warning: #b8c924;
 $danger: #d62518;
 $light: #f8f9fa;
-$dark: #343a40;
+$dark: #090909;
 
 //custom color to be mapped
-$sap : #6f42c1;
+$sap : #6500b2;
 
 // this is used to map colors. change accordingly.
 $theme-colors: (
