updates to create deal form

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -28,4 +28,5 @@ $theme-colors: (
 );
 
 
-$nav-pills-link-active-bg : $sap
+$nav-pills-link-active-bg : $sap;
+$form-select-focus-border-color : $info;
