--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -10,7 +10,10 @@ $light: #f8f9fa;
 $dark: #090909;
 
 //custom color to be mapped
-$sap : #6500b2;
+$sap : #ffcefe;
+$sap-dark : #d9acf5;
+$sap-turq : #aae3e2;
+$sap-orange : #ef9a53;
 
 // this is used to map colors. change accordingly.
 $theme-colors: (
