--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -10,10 +10,12 @@ $light: #f8f9fa;
 $dark: #090909;
 
 //custom color to be mapped
-$sap : #ffcefe;
-$sap-dark : #d9acf5;
-$sap-turq : #aae3e2;
-$sap-orange : #ef9a53;
+$sap : #c780fa;
+$saplight : #ffcefe;
+$sapdark : #6f1ab6;
+$sapturq : #aae3e2;
+$saporange : #ef9a53;
+$sapred : #ff0032;
 
 // this is used to map colors. change accordingly.
 $theme-colors: (
@@ -27,6 +29,11 @@ $theme-colors: (
   dark: $dark,
 // add any additional color below
   sap: $sap,
+  saplight: $saplight,
+  sapdark: $sapdark,
+  sapturq: $sapturq,
+  saporange: $saporange,
+  sapred : $sapred
 // now bg-accent,btn-accent,etc.. can be called
 );
 
